# 1

./: README.md  pyproject.toml
configs/: baseline.yaml  experiments.yaml
reports/: experiments.csv
src/eurusd_elliott_rsi/: __init__.py
src/eurusd_elliott_rsi/backtest/: engine.py
src/eurusd_elliott_rsi/data/: tradingview.py
src/eurusd_elliott_rsi/experiments/: run.py
src/eurusd_elliott_rsi/features/: elliott.py  rsi.py
src/eurusd_elliott_rsi/models/: supervised.py  unsupervised.py
src/eurusd_elliott_rsi/strategies/: baseline.py
tests/: test_elliott.py  test_scaffold.py
