[project]
name = "eurusd-elliott-rsi"
version = "0.1.0"
description = "EUR/USD Elliott RSI research utilities"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "pyarrow>=14.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
